--- a/node/task-manager/package.json
+++ b/node/task-manager/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/db/mongoose.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.5.8"
+    "mongodb": "^3.5.8",
+    "mongoose": "^5.9.18"
   }
 }
