--- a/node/task-manager/package.json
+++ b/node/task-manager/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "mongodb": "^3.5.8",
-    "mongoose": "^5.9.18"
+    "mongoose": "^5.9.18",
+    "validator": "^13.0.0"
   }
 }
